Полноситью изменена структура проекта
- Устранен баг при попытке выхода из приложения
- Удалены неправильно работающие моду расчета синусов, косинусов и тангенсов.
- Переделан модуль решения квадратных уравнений
- Временно удален модуль систем исчисления
- Добавлен расчет процентов
- Добавлен расчет числа пи

--- a/(CNG)-Calculator/(CNG)-Calculator.csproj
+++ b/(CNG)-Calculator/(CNG)-Calculator.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>_CNG__Calculator</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Start\" />
+    <Folder Include="computation\" />
+  </ItemGroup>
 </Project>
