--- a/(CNG)-Calculator/(CNG)-Calculator.csproj
+++ b/(CNG)-Calculator/(CNG)-Calculator.csproj
@@ -9,5 +9,6 @@
   <ItemGroup>
     <Folder Include="Start\" />
     <Folder Include="computation\" />
+    <Folder Include="common\" />
   </ItemGroup>
 </Project>
